--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,17 @@
 .history
 .svn/
 migrate_working_dir/
+lib/algorithm
+lib/data
+lib/models/
+lib/provider
+lib/screen
+lib/services
+lib/src
+lib/Tab_pages
+lib/test
+lib/widget
+
 
 # IntelliJ related
 *.iml
