--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,27 @@ dependencies:
   currency_picker: ^2.0.5
   intl: ^0.17.0
   firebase_auth: ^4.4.2
+  logging: ^1.1.1
+  fluttertoast: ^8.2.1
+  flutter_neumorphic: ^3.2.0
+  page_transition: ^2.0.9
+  google_fonts: ^4.0.3
+  provider: ^6.0.5
+  contacts_service: ^0.6.3
+  # flutter_icons: ^1.1.0
+  flutter_icons_null_safety: ^1.1.0
+  flutter_slidable: ^3.0.0
+  flutter_charts: ^0.5.1
+  charts_flutter: ^0.12.0
+  google_sign_in: ^5.3.3
+  permission_handler: ^10.2.0
+  flutter_sms: ^2.3.3
+  font_awesome_flutter: ^10.1.0
+  email_validator: ^2.0.1
+  # firebase_core: ^1.19.1
+
+
+
   
 
 
@@ -66,8 +87,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo1.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
