--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo1.jpeg
+    - assets/groupicon.jpg
+    - assets/expenseIcon.jpg
+    - assets/expenseIcon2.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
