--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mailer: ^6.0.1
+  flutter_local_notifications: ^14.0.0+1
+  firebase_messaging: ^14.4.1
 
 dev_dependencies:
   flutter_test:
