added upiPayment Integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   email_validator: ^2.0.1
   # firebase_core: ^1.19.1
+  upi_india: ^3.0.1
+  # upi_pay: ^1.0.1
+  # paytm_alli/////nonesdk: ^1.2.1
+  # paytm: ^3.0.1
 
 
 
