--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ flutter:
     - assets/google-logo.png
     - assets/logos/sw-wide.png
     - assets/pf.png
+    - assets/expenseIcon3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
