--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_local_notifications: ^14.0.0+1
   firebase_messaging: ^14.4.1
   google_nav_bar: ^5.0.6
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
